<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroud"
    android:orientation="vertical" >

    <include layout="@layout/top_tilte" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_vertical"
            android:orientation="vertical" >
            
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="20dp" >

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="手机号："
                    android:text="手机号："
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="无此信息"
                    android:textColor="#000"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="楼座号："
                    android:text="楼座号："
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/balcony"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:text="无此信息"
                    android:textColor="#000"
                    android:textSize="18sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="40dp" >

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:hint="楼座号："
                    android:text="昵    称："
                    android:textColor="#000"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/nicknameText"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="无此信息"
                    android:textColor="#000"
                    android:textSize="18sp" />

            </LinearLayout>

            <Button
                android:id="@+id/shebei"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:background="@null"
                android:text="@string/shebei"
                android:textSize="18sp" />

            <Button
                android:id="@+id/about"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="20dp"
                android:background="@null"
                android:text="@string/about_yckz"
                android:textSize="18sp" />

            <Button
                android:id="@+id/logout_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@null"
                android:text="@string/logout_user"
                android:textColor="@color/red"
                android:textSize="18sp" />
            
        </LinearLayout>

    </ScrollView>

</LinearLayout>